--- a/css/tooltipster.css
+++ b/css/tooltipster.css
@@ -5,19 +5,18 @@ html {
 
 /* This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!): */
 .tooltipster-default {
-	border-radius: 5px; 
-	border: 2px solid #000;
-	background: #4c4c4c;
-	color: #fff;
+	border-radius: 0px; 
+	border: 3px solid #2c2c2c;
+	background: #fff;
+	color: #2c2c2c;
 }
 
 /* Use this next selector to style things like font-size and line-height: */
 .tooltipster-default .tooltipster-content {
-	font-family: Arial, sans-serif;
+	font-family: 'Georgia', serif;
 	font-size: 14px;
 	line-height: 16px;
 	padding: 8px 10px;
-	overflow: hidden;
 }
 
 /* This next selector defines the color of the border on the outside of the arrow. This will automatically match the color and size of the border set on the main tooltip styles. Set display: none; if you would like a border around the tooltip but no border around the arrow */
