autocomplete more advance
includes tags, also made tagging more dynamic, cleaner, and redefined
several styles for the main site view. added welcome message and video

--- a/css/addClaim.css
+++ b/css/addClaim.css
@@ -2,9 +2,11 @@
 	margin-bottom: 0px !important;
 }
 
+/*removed to fit welcome message
 #urlButton, #urlInput {
 	position: absolute;
 }
+*/
 
 #urlButton {
 	opacity: 0.6;
