--- a/css/general.css
+++ b/css/general.css
@@ -11,7 +11,6 @@ body, html{
 }
 
 html {
-	position: relative;
 	min-height: 100%;
 }
 
@@ -19,7 +18,6 @@ body{
 	color:#444;
 	font-family: Cambria;
 	font-size: 14px;
-	margin: 0 0 110px;
 }
 
 .lightsout {
@@ -46,6 +44,8 @@ a {
 	color: green;
 }
 
+
+
 li {
 	list-style-type: none;
 }
@@ -54,6 +54,7 @@ a:hover {
 	text-decoration: underline;
 	color: black;
 }
+
 
 h1, h2, h3 {
 	font-family: Rockwell;
@@ -90,43 +91,82 @@ input.infocus, textarea.infocus {
 header{
 	/*vertical, then horizontal*/
 	width:900px;
+	padding: 3px;
 	margin:0px auto 15px;
 	
-	/*background-color: rgb(220, 220, 220); /*#c6fff1*/
-	background-color: lightgreen;
+	background-color: #0A6107;
 
-
-	/*position: absolute;*/
 	top: 0;
 	left: 0;
+	border-top:3px solid #fff;
+	border-bottom:3px solid #ccc;
 	
 	width: 100%;
-	/*height: 50px;*/
+}
+
+header, #logoImage{
+	height:52px;
 }
 
 #topbar {
 	width: 915px;
-	padding: 10px;
 	margin: 0 auto;
-	background-color: #00C12B;
-	position: relative;
+	/*background-color: #4D7938;*/
+	/*position: relative;*/
+	overflow:hidden;
 }
-/*header * {
-	margin: 10px;
-}*/
+
+#logoImage{
+	vertical-align: text-top;
+}
 
 header h1 {
-	float: left;
-	margin-right: 20px;
+	font-size:43px;
+	font-weight:normal;
+	position:absolute;
+	left:5px;
+}
+
+header h1 a{
+	color:#fff;
+}
+
+header a{
+	color:#fff;
+}
+
+header a:hover, footer a:hover {
+	color: #fff;
 }
 
 header input {
-	width: 400px;
+	width: 915px;
+	height:20px;
+	margin-top:9px;
 }
 
 header span {
 	float: right;
 	margin-left:10px;
+}
+
+#login_buttons{
+	position:absolute;
+	top:17px;
+	right:10px;
+}
+
+#login_buttons a{
+	border-radius: 2px;
+	background-color:#E2EEBE;
+	color:#0A6107;
+	font-weight: bold;
+	padding: 5px 10px 5px 10px;
+	font-size: 14px;
+	font-family:Verdana, Geneva, sans-serif;
+	display:inline-block;
+	margin-right: 5px;
+
 }
 
 #tags-label {
@@ -138,19 +178,19 @@ header span {
 /*Footer---------------------------*/
 
 footer {
-	background-color: lightgrey;
-	
-	position: absolute;
-	left: 0;
-	bottom: 0;
+	background-color: #004509;
 	width: 100%;
+}
+
+footer, footer a{
+	color:white;
 }
 
 #bottomBar {
 	width: 915px;
 	padding: 15px;
 	margin: 0 auto;
-	background-color: rgb(190,190,190);
+	background-color: #003904;
 	text-align: center;
 }
 
@@ -176,6 +216,10 @@ footer {
 
 #main > div {
 	margin-bottom: 20px;
+}
+
+#main h1{
+	font-size:40px;
 }
 	
 /*SignupPopup------------------------*/
@@ -254,3 +298,54 @@ input[type=button], input[type=submit] {
 .quarter {
 	width: 25%;
 }
+
+
+/*------------AutoComplete--------------*/
+
+	.autoCompleteResult{
+		width:915px;
+		background-color:#fff;
+	}
+
+	.autoCompleteHeader{
+		background-color:#444;
+		color:#fff;
+		width:905px;
+		padding:5px 0px 5px 5px;
+		border-radius: 4px;
+	}
+
+	.autoCompleteResult .resultScore{
+		display:inline-block;
+		margin-left:20px;
+		padding-left:3px;
+		padding-right:3px;
+		border:1px solid #ccc;
+		border-radius:3px;
+		color:#fff;
+	}
+
+	.claimResult .resultScore{
+		background-color:#B06307;
+	}
+
+	.companyResult .resultScore{
+		background-color:#075B8C;
+	}
+
+	.tagResult .resultScore{
+		background-color:#666;
+	}
+
+	.claimResult a{
+		color:#B06307 !important;
+	}
+
+	.companyResult a{
+		color:#075B8C !important;
+	}
+
+	.ui-menu-item a.ui-state-focus{
+		margin:0px !important;
+		border:0px !important;
+	}
