--- a/css/general.css
+++ b/css/general.css
@@ -115,11 +115,8 @@ header, #logoImage{
 }
 
 #topbar {
-	width: 915px;
-	margin: 0 auto;
-	/*background-color: #4D7938;*/
-	/*position: relative;*/
 	overflow:hidden;
+	margin-left: 250px;
 }
 
 #logoImage{
@@ -146,7 +143,7 @@ header a:hover, footer a:hover {
 }
 
 header input {
-	width: 915px;
+	width: 70%;
 	height:20px;
 	margin-top:9px;
 }
