Added functionality for viewing a treemap of claims related to the relevant company on claim pages.

--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -44,7 +44,9 @@
 		margin: 50px auto;
 	}
 	
-
+	#scoreContainer #treemapCanvas {
+		margin: 5px auto;
+	}
 /*-----------------------Claim and Industry Tags-------------------*/
 	
 	#tagSection{
