--- a/css/profile.css
+++ b/css/profile.css
@@ -77,4 +77,14 @@ li {
 
 .coComment {
 	float: right;
+	margin-right: 20px;
+}
+
+.scrollBox {
+	height: 500px;
+	overflow: auto;
+}
+
+.topBorder {
+	border-top: 2px solid darkgray;
 }
