--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -101,7 +101,7 @@
 
 
 	#evidenceContent {
-		border-left: 5px solid blue;
+		border-left: 5px solid #555;
 		background-color: #F2F2F2;
 	}
 
@@ -116,7 +116,7 @@
 	}
 
 	#evidenceContent dd {
-		margin-left: 75px;
+		margin-left: 90px;
 	}
 
 
