--- a/css/welcome.css
+++ b/css/welcome.css
@@ -10,6 +10,50 @@
 		font-size:15pt;
 	}
 
+	#welcomeContainer {
+		background-color: rgba(235, 231, 183, 0.7);
+		position: absolute;
+		left: 0;
+		top: 60px;
+		padding-top: 10%;
+		padding-left: 15%;
+		width: 86%;
+		z-index: 300;
+		display: none;
+	}
+
+	#welcomeMessage {
+		position: relative;
+		width: 940px;
+		height: 400px;
+		padding: 10px;
+		background-color: white;
+		opacity: 1;
+	}
+
+	#welcomeButtons {
+		margin-top: 30px;
+	}
+
+	#welcomeButtons button {
+		padding: 10px;
+	}
+
+	#xbutton {
+		position: absolute;
+		right: 0;
+		top: 0;
+		font-size: 18pt;
+		color: gray;
+		background-color: transparent;
+		border: none;
+		cursor: pointer;
+	}
+
+	#xbutton:hover {
+		background-color: lightgray;
+	}
+
 /*-------------Call to Arms---------------------*/
 
 
@@ -37,44 +81,29 @@
 
 /*-------------Video---------------------*/
 
-
 	#videoContainer{
 		width:500px;
 	}
 
-/*call to actions*/
+/*------------call to actions------------*/
 
 	#actions {
-		clear: both;
-		overflow: hidden;
-
-		/*  create a flex layout context */
-		display: -webkit-box;
-		display: -moz-box;
-		display: -ms-flexbox;
-		display: -webkit-flex;
-		display: flex;
-		/* Then we define the flow direction and if we allow the items to wrap 
-		* Remember this is the same as:
-		*/
-		-webkit-flex-flow: row wrap;
-		flex-flow: row wrap;
-
-		/* Then we define how is distributed the remaining space */
-		justify-content: space-around;
-
 		text-align: center;
+		width: 900px;
+		height: 145px;
+		margin: 0 auto;
 	}
 
 	#actions a {
-		margin: auto;
+		float: left;
 	}
 
 	#actions div {
 		padding: 5px;
 		border: 1px solid;
-		/*height: 60px;*/
 		width: 280px;	
+		height: 130px;
+		margin-right: 5px;
 	}
 
 	#actions div img {
