--- a/css/general.css
+++ b/css/general.css
@@ -95,27 +95,17 @@ input.infocus, textarea.infocus {
 
 header{
 	/*vertical, then horizontal*/
-<<<<<<< HEAD
 	width: 100%;
-	padding: 3px;
-=======
-	width:900px;
->>>>>>> 1ec2192c5eec2a50e9e8db132e3a41a95fcf6ec3
 	margin:0px auto 15px;
+	padding-top:3px;
 	
 	background-color: #0A6107;
 	padding-top: 2px;
 
 	top: 0;
 	left: 0;
-<<<<<<< HEAD
-	border-top:3px solid #fff;
-	border-bottom:3px solid #ccc;
-=======
 	border-bottom:3px solid #f0f0f0;
 	
-	width: 100%;
->>>>>>> 1ec2192c5eec2a50e9e8db132e3a41a95fcf6ec3
 }
 
 header, #logoImage{
@@ -152,6 +142,12 @@ header h1 a{
 	color:#fff;
 }
 
+#title_text{
+	margin-left: 0px;
+	padding-top: 11px;
+	display: inline-block;
+}
+
 header a{
 	color:#fff;
 }
@@ -161,7 +157,7 @@ header a:hover, footer a:hover {
 }
 
 header input {
-	width: 70%;
+	width: 100%;
 	height:20px;
 	margin-top:9px;
 	position: relative;
