--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -39,6 +39,13 @@
 		border: 1px solid #D5D5D5;
 	}
 
+	#main > div > div {
+		background-color:#fff;
+		-webkit-box-shadow: 2px 2px 10px rgba(94, 94, 94, 0.7);
+		-moz-box-shadow: 2px 2px 10px rgba(94, 94, 94, 0.7);
+		box-shadow: 2px 2px 10px rgba(94, 94, 94, 0.7);
+	}
+
 /*------------------------Treemap View-----------------------------*/
 	#treemapCanvas {
 		margin: 50px auto;
@@ -49,22 +56,12 @@
 	}
 /*-----------------------Claim and Industry Tags-------------------*/
 	
-	#tagSection{
-		overflow:hidden;
-		margin-bottom:-20px;
-	}
+	#tagSection{}
 
-	#tagSectionIndicator{
-		width:80px;
-	}
+	#tagSectionIndicator{}
 
 	#taglist{
 		overflow:hidden;
-		width:835px;
-	}
-
-	#tagSectionIndicator, #taglist {
-		float:left;
 	}
 
 	#tagSection li {
@@ -107,7 +104,8 @@
 	}
 
 	#newtag_name, #addTag{
-		margin-left:80px;
+		margin-left:90px;
+		margin-bottom:4px;
 	}
 
 	.originalTagPreview{
@@ -139,6 +137,10 @@
 
 	#evidenceContent dd {
 		margin-left: 90px;
+	}
+
+	#evidenceContent dt, #evidenceContent dd{
+		margin-top: 4px;
 	}
 
 
