--- a/css/general.css
+++ b/css/general.css
@@ -18,7 +18,6 @@ body{
 	color:#444;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	font-size: 14px;
-	background: url('/img/square_bg.png');
 }
 
 .lightsout {
@@ -171,7 +170,7 @@ header span {
 
 #login_buttons{
 	position:absolute;
-	top:17px;
+	top:13px;
 	right:10px;
 }
 
@@ -244,7 +243,7 @@ footer, footer a{
 /*Main-----------------------------*/
 
 #main{
-	width:915px;
+	width:925px;
 	margin:0px auto;
 	overflow: hidden;
 	/* border: 1px solid; */
@@ -256,7 +255,13 @@ footer, footer a{
 
 #main h1{
 	font-size: 28px;
-	margin-top: 20px;
+	margin-top: 30px;
+}
+
+#main > div , #main h1 {
+	width:915px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #main h1 a{
