--- a/css/profile.css
+++ b/css/profile.css
@@ -15,7 +15,7 @@ li {
 .container {
 	float: left;
 	width: 100%;
-	margin-top: 10px;
+	margin-top: 0px;
 }
 
 #user {
@@ -24,6 +24,7 @@ li {
 
 #user h1 {
 	float: left;
+	margin-top: 0;
 }
 
 #user p {
