--- a/css/general.css
+++ b/css/general.css
@@ -26,7 +26,7 @@ body{
 	left: 0;
 	width: 100%;
 	z-index: 100;
-	background-color: black;
+	background-color: rgba(235, 231, 183, 0.7);
 	opacity: 0.7;
 	display: none;
 	text-align: left;
