--- a/css/welcome.css
+++ b/css/welcome.css
@@ -5,45 +5,42 @@
 */
 
 /*-------------General---------------------*/
-	#welcomeContainer {
-		background-color: rgba(235, 231, 183, 0.7);
-		position: absolute;
-		left: 0;
-		top: 60px;
-		padding-top: 10%;
-		padding-left: 15%;
-		width: 86%;
-		z-index: 300;
-		display: none;
-	}
-
 	#welcomeMessage {
-		position: relative;
-		width: 940px;
-		height: 400px;
-		padding: 10px;
+		position: absolute;
 		background-color: white;
+		left: 50%;
+		top: 30%;
+		width: 940px;
+		margin-left: -470px;
+		height: 335px;
+		padding: 10px;
 		opacity: 1;
+		z-index: 1000;
 		-moz-border-radius: 15px;
-		border-radius: 15px;		
+		border-radius: 15px;
+		-webkit-box-shadow: 0px 0px 15px rgba(50, 50, 50, 0.75);
+		-moz-box-shadow: 0px 0px 15px rgba(50, 50, 50, 0.75);
+		box-shadow: 0px 0px 15px rgba(50, 50, 50, 0.75);
 	}
 
 	#welcomeMessage div{
 		float:left;
-		font-size:15pt;
+		font-size:13pt;
 	}
 
 	#welcomeButtons {
-		margin-top: 30px;
+		text-align: center;
+		float: none !important;
 	}
 
 	#welcomeButtons button {
 		padding: 10px;
+		float: none !important;
 	}
 
 	#xbutton {
 		position: absolute;
-		right: 0;
+		right: 7px;
 		top: 0;
 		font-size: 18pt;
 		color: gray;
