--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -6,8 +6,6 @@
 
 */
 
-
-
 /*-------------------------General---------------------------------*/
 
 	ul {
@@ -66,12 +64,13 @@
 
 	#tagSection li {
 		float: left;
-		padding: 2px 2px 2px 2px;
-		list-style-type: none;
-		background-color: #FEF5CA;
-		border: 1px solid rgb(168, 162, 130);
-		border-radius:3px;
+		padding: 4px;
+		/*list-style-type: none;*/
+		/*background-color: #FEF5CA;*/
+		/*border: 1px solid rgb(168, 162, 130);*/
+		/*border-radius:3px;*/
 		margin-bottom:5px;
+		position: relative;
 	}
 
 	#tagSection .tagUpvote {
@@ -85,14 +84,50 @@
 		text-decoration: underline;		
 	}
 
-	#tagSection li.userVoted {
-		background-color:#EEE;
+	.fancyTags span {
+		vertical-align: middle;
 	}
+
+	.fancyTags:before {
+		content: "";
+		height: 30px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		padding-left: 20px;
+	}
+
+	.fancyTags {
+		display: inline-block;
+		height: 25px;
+		margin-left: 10px;
+		padding-left: 5px;
+		padding-right: 10px;
+	}
+
+	.userVoted:before {
+		background: url('/img/tag.png') no-repeat left -30px;
+	}
+
+	.userVoted {
+		background: url('/img/tag.png') no-repeat right -97px;
+	}
+
+	.notVoted:before {
+		background: url('/img/tag.png') no-repeat left 0;
+
+	}
+
+	.notVoted {
+		background: url('/img/tag.png') no-repeat right -67px;
+
+	}
+
 
 /*-----------------------Add New Tag---------------------------*/
 
 	#addTag {
-		background-color: #FEF5CA;
+		background-color: #4BC2ED;
 		border: 1px solid #999;
 		border-radius:3px;
 		font-weight: bold;
