--- a/css/welcome.css
+++ b/css/welcome.css
@@ -41,7 +41,7 @@
 	#xbutton {
 		position: absolute;
 		right: 7px;
-		top: 0;
+		top: 0px;
 		font-size: 18pt;
 		color: gray;
 		background-color: transparent;
