--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -16,7 +16,7 @@
 		display: inline;
 		list-style-type: none;
 		float: left;
-		padding-right: 20px;
+		/*padding-right: 20px;*/ /*cut off right border in highlow claims view*/
 		margin-right: 5px;
 	}
 
@@ -37,7 +37,7 @@
 		border: 1px solid #D5D5D5;
 	}
 
-	#main > div > div {
+	#main > div > div, #main > div > ul > li {
 		background-color:#fff;
 		-webkit-box-shadow: 2px 2px 10px rgba(94, 94, 94, 0.7);
 		-moz-box-shadow: 2px 2px 10px rgba(94, 94, 94, 0.7);
