added fancytags to new tags as well

--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -81,7 +81,7 @@
 
 	#tagSection .tagUpvote:hover {
 		color: black;
-		text-decoration: underline;		
+		cursor: pointer;
 	}
 
 	.fancyTags span {
@@ -122,7 +122,6 @@
 		background: url('/img/tag.png') no-repeat right -67px;
 
 	}
-
 
 /*-----------------------Add New Tag---------------------------*/
 
