add tag button inline instead on another line

--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -155,8 +155,11 @@
 	}
 
 	#newtag_name, #addTag{
-		margin-left:90px;
 		margin-bottom:4px;
+	}
+
+	#newtag_name {
+		margin-left:90px;
 	}
 
 	.originalTagPreview{
