--- a/css/general.css
+++ b/css/general.css
@@ -417,6 +417,20 @@ li.ui-menu-item a {
 	text-align: left !important;
 }
 
+.loadingOverlay {
+	position: absolute;
+	margin-top: 15px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255,255,255, 0.8);
+}
+
+
+.loadingOverlay img{
+	margin-left: 50%;
+	margin-top: 250px;
+}
+
 /*-----------Edit Button styles-----------*/
 .editbutton {
 	width: 20px;
