--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -148,7 +148,7 @@
 		font-weight: bold;
 		display: inline;
 		float: left;
-		padding: 4px 20px 4px 20px;
+		padding: 1px 10px;
 		font-size: 14px;
 		clear:both;
 	}
