--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -112,6 +112,8 @@
 		padding-left: 5px;
 		padding-right: 10px;
 		line-height: 25px;
+		border-radius: 0px;
+		-moz-border-radius: 0px;
 	}
 
 	.userVoted:before {
@@ -148,7 +150,7 @@
 		font-weight: bold;
 		display: inline;
 		float: left;
-		padding: 1px 10px;
+		padding: 3px 10px;
 		font-size: 14px;
 		clear:both;
 	}
