--- a/css/toggleview.css
+++ b/css/toggleview.css
@@ -12,13 +12,13 @@
 	}
 
 	.toggleviewButtons {
-		border: 1px solid black;
+		border: 1px solid white;
 		width: 39px;
 		height: 25px;
 	}
 
 	.selected {
-		border: 1px solid black !important;
+		border: 1px solid white !important;
 		background-color: darkgray !important;
 	}
 	
