--- a/css/general.css
+++ b/css/general.css
@@ -36,7 +36,7 @@ a, input, label, li, textarea, #urlButton, button {
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;	
+    transition: all 0.5s ease;    
 }
 
 a {
@@ -267,9 +267,9 @@ footer, footer a{
 	margin-right: auto;
 }
 
-div, input, textarea, label {
-	border-radius: 6px;
-	-moz-border-radius: 6px;
+div, input, textarea, label, button, li, p {
+	border-radius: 5px;
+	-moz-border-radius: 5px;
 }
 
 #main h1 a{
